--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-server-starter",
+  "name": "node-xammp-server-starter",
   "version": "1.0.0",
   "description": "Node.js Server Starter Template. Helps to developer setup the project within few minutes",
   "main": "index.js",
@@ -14,8 +14,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.2"
   },
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/multer": "^1.4.11"
+    "@types/multer": "^1.4.11",
+    "@types/mysql": "^2.15.26"
   }
 }
