--- a/.env
+++ b/.env
@@ -1,13 +1,27 @@
-# http://www.apache.org/licenses/
+# http://www.techzaint.com
 # SERVER RUNNING PORT
+#--------------------------------
 PORT=5000
 
 # MySQL Configuration
+#--------------------------------
 DB_HOST=localhost
 DB_USER=root
 DB_NAME=user_management
 DB_PASSWORD=
 
 # MAIL Configuration
+#--------------------------------
+MAIL_MAILER=smtp
+MAIL_HOST=mailpit
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_NAME="${APP_NAME}"
+
+# Payment Gateway Configuration
+#--------------------------------
 
 
