--- a/.env
+++ b/.env
@@ -1,25 +1,21 @@
 # http://www.techzaint.com
 # SERVER RUNNING PORT
 #--------------------------------
-PORT=5000
+PORT="5000"
 
 # MySQL Configuration
 #--------------------------------
-DB_HOST=localhost
-DB_USER=root
-DB_NAME=user_management
+DB_HOST="localhost"
+DB_USER="root"
+DB_NAME="user_management"
 DB_PASSWORD=
 
 # MAIL Configuration
 #--------------------------------
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=""
+MAIL_PORT=
+MAIL_USERNAME=""
+MAIL_PASSWORD=""
 
 # Payment Gateway Configuration
 #--------------------------------
