SSL Commerze Implemented

--- a/.env
+++ b/.env
@@ -21,4 +21,8 @@ MAIL_PASSWORD=""
 # Payment Gateway Configuration
 #--------------------------------
 
+# SSL COMMERZE Configuration
+STORE_ID=
+STORE_PASSWORD=
+IS_LIVE=
 
