--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
+    "sslcommerz-lts": "^1.1.0",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
