--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
+    "paypal-rest-sdk": "^1.8.1",
     "sslcommerz-lts": "^1.1.0",
     "typescript": "^5.4.2"
   },
@@ -27,6 +28,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/mysql": "^2.15.26",
-    "@types/nodemailer": "^6.4.14"
+    "@types/nodemailer": "^6.4.14",
+    "@types/paypal-rest-sdk": "^1.7.9"
   }
 }
