--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-rate-limit": "^7.2.0",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
+    "password-hash": "^1.2.2",
     "paypal-rest-sdk": "^1.8.1",
     "sslcommerz-lts": "^1.1.0",
     "typescript": "^5.4.2"
@@ -26,10 +29,12 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/mysql": "^2.15.26",
     "@types/nodemailer": "^6.4.14",
+    "@types/password-hash": "^1.2.24",
     "@types/paypal-rest-sdk": "^1.7.9"
   }
 }
