--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-xammp-server-starter",
+  "name": "sports-management-server",
   "version": "1.0.0",
-  "description": "Node.js Server Starter Template. Helps to developer setup the project within few minutes",
+  "description": "Sports Management Node.js Server",
   "main": "index.js",
   "scripts": {
     "start": "nodemon dist/server.js",
@@ -14,9 +14,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-rate-limit": "^7.2.0",
-    "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.12",
@@ -29,7 +29,6 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/mysql": "^2.15.26",
